--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sonarjs-issue-no-empty-collection-logical-or-assignement",
+  "name": "sonarjs-issue-cant-deactivate-no-empty-test-file",
   "version": "0.1.0",
   "description": "",
   "type": "module",
@@ -10,7 +10,7 @@
     "lint:js": "eslint"
   },
   "devDependencies": {
-    "eslint": "^9.7.0",
-    "eslint-plugin-sonarjs": "^1.0.4"
+    "eslint": "9.14.0",
+    "eslint-plugin-sonarjs": "2.0.4"
   }
 }
